[tool.poetry]
name = "continuun"
version = "0.1.0"
description = ""
authors = ["roger <roger.ldr@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pandas = "^1.4.2"
scipy = "^1.8.0"
seaborn = "^0.11.2"
ipykernel = "^6.13.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
